--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   min-height: 100vh;
 }
 
-h1 {
+h1, h2 {
   display: flex;
   justify-content: center;
   font-family: cursive;
@@ -57,17 +57,29 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-#book-lists {
+#booklists {
   display: flex;
   flex-wrap: wrap;
   justify-content:center;
 }
 
-#book-lists > section{
+#booklists > section{
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 30px;
+}
+
+#singlebook {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#nav {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: x-large;
 }
 
 @media (prefers-color-scheme: light) {
